      touchscreen devices like tablet PCs or the Nokia Mameo devices.
      (Addresses SourceForge RFE #1673344)

    * Added an "autosave" option that assumes you wish to save the current
      picture during Quit.  (Additionally, after saving during Quit or Open,
      it no longer shows 'success' pop-up that must be dismissed.)
      (Addresses SourceForge RFE #1680500)

  * Tool Improvements:
    ------------------
    * Input Method Framework, with implementations of Korean (Hangul 2-Bul)
      and Japanese (Romanized Hiragana and Romanized Katakana) input methods.
      (Should be extensible to other languages.)
      (Addresses SourceForge Bug #1070414)
      Mark K. Kim <mkkim214@gmail.com>

    * Stamps now supports SVG vector-based graphics!  (Via Cairo library)
      (Only SVG versions of stamps are loaded, when both PNG and SVG
      variations are found.)

      (Experimental; build with "make nosvg" to disable SVG support and
      Cairo dependency.)

    * Stamps now shown in groups.
      FIXME: Finish!
      (Addresses SourceForge Feature Request #1070394)

    * Bilinear interpolation (smoothing) is done to small bitmap (PNG)
      stamps when they are scaled up.
      (Based on example code by Christian Graus:
      http://www.codeproject.com/cs/media/imageprocessing4.asp )

    * New brushes:
      Caroline Ford <caroline.ford.work@googlemail.com>
      + Blob
      + Chisle
      + Cut-out square in diamond
      + Cut-out star in circle
      + Diamond
      + Five-petal flower (large and small)
      + Six-petal flower (large and small)
      + Heart
      + Hexagon
      + Lozenge
      + Oval
      + Pentagon
      + Spiral
      + Splat
      + Star
      + Triangle (up and down)

  * System-related improvements:
    ----------------------------
    * When running in fullscreen mode, you may now ask Tux Paint to display
      at the screen's (more precisely, the operating system's) current