@@ -131,6 +131,13 @@ New Breed Software</p>
     </p>
   </dd>
 
+  <dt><code><b>orient=portrait</b></code></dt>
+  <dd>
+    <p>Swaps the width/height options given to Tux&nbsp;Paint, useful for
+    rotating the window on portait displays, such as a tablet&nbsp;PC that's
+    in tablet orientation.
+  </dd>
+
   <dt><code><b>native=yes</b></code></dt>
   <dd>
     <p>When running <i>Tux&nbsp;Paint</i> in fullscreen mode, this
@@ -867,6 +874,7 @@ New Breed Software</p>
     <dt><code><b>
     --fullscreen<br>
     --<i>WIDTH</i>x<i>HEIGHT</i><br>
+    --orient=portrait<br>
     --native<br>
     --startblank<br>
     --nosound<br>
@@ -904,6 +912,7 @@ New Breed Software</p>
     <dt><code><b>
     --windowed<br>
     --800x600<br>
+    --orient=landscape<br>
     --startlast<br>
     --sound<br>
     --quit<br>
